<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp"
            tools:context=".CreateReminderActivity">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="30px" android:layout_marginBottom="30px">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="198dp"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Select reminder date:" android:id="@+id/textViewDate"/>
                <TextView
                        android:id="@+id/show_selected_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selected_date"
                        android:textSize="18sp"
                        android:layout_marginTop="80px"/>
                <Button
                        android:id="@+id/pick_date_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp"
                        android:text="@string/select_date"
                        android:textSize="18sp"
                        android:layout_marginTop="80px"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_reminder_time"
                        android:textAlignment="center"/>
                <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="173dp"
                        android:layout_height="149dp"
                        android:timePickerMode="spinner" android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_reminder_info" android:layout_marginTop="30px"/>

        <EditText
                android:id="@+id/reminder_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reminder_info"
                android:inputType="textCapSentences"
                android:lines="2"
                android:maxLength="140"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter reminder tag:" android:id="@+id/textView"/>
        <EditText
                android:id="@+id/reminder_tag_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="reminder tag"
                android:inputType="textCapSentences"
                android:lines="2"
                android:maxLength="140"
        />

        <Button
                android:id="@+id/save_reminder_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_reminder"
                android:layout_gravity="center"
                android:textSize="18sp"/>

    </LinearLayout>
</ScrollView>